--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1778,6 +1778,53 @@ body {
 .cid-qU65ka4oWR P {
   color: #ff3366;
 }
+.cid-qU65ka4oWR H3 {
+  color: #ff7f9f;
+  text-align: left;
+}
+.cid-qU6ftj63eh {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-qU6ftj63eh .mbr-text,
+.cid-qU6ftj63eh blockquote {
+  color: #767676;
+}
+.cid-qU6ftj63eh .mbr-text P {
+  text-align: center;
+}
+.cid-qU6eTwNZVe {
+  padding-top: 75px;
+  padding-bottom: 90px;
+  background-color: #7f1933;
+}
+.cid-qU6eTwNZVe .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-qU6eTwNZVe .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-qU6eTwNZVe .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-qU6eTwNZVe .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-qU6eTwNZVe .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
 .cid-qU69W0Mmvw {
   padding-top: 30px;
   padding-bottom: 30px;
